src/components/modus-wc-collapse/modus-wc-collapse.scss
/**
* This component uses Tailwind CSS and DaisyUI.
* Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
*/

modus-wc-collapse .modus-wc-collapse {
  background-color: var(--modus-wc-color-base-100);
  border-color: transparent;
  box-sizing: border-box;
  color: var(--modus-wc-color-base-content);
  margin-bottom: var(--modus-wc-spacing-md);
  transition: none !important;

  .modus-wc-collapse-title {
    font-weight: var(--modus-wc-font-weight-semibold);
    min-height: unset;
    width: auto;
  }

  modus-wc-icon {
    height: 24px;
    margin-inline-end: var(--modus-wc-spacing-sm);
  }

  &.modus-wc-border {
    background: var(--modus-wc-color-base-page);
    border: var(--modus-wc-border-width-xs) solid var(--modus-wc-color-base-200);
    border-radius: var(--modus-wc-border-radius-box);
  }

  &.modus-wc-collapse-arrow.modus-wc-collapse-open {
    .modus-wc-collapse-content {
      padding: var(--modus-wc-spacing-lg);
    }

    .modus-wc-collapse-title {
      background-color: var(--modus-wc-color-base-200);
    }
  }

  &.modus-wc-collapse-arrow.modus-wc-border.modus-wc-collapse-open {
    .modus-wc-collapse-title {
      background-color: var(--modus-wc-color-base-100);
    }
  }
}

.modus-wc-collapse-arrow > .modus-wc-collapse-title::after {
  top: 50%;
}

[data-theme='modus-classic-light'] modus-wc-collapse .modus-wc-collapse,
[data-theme='modus-classic-dark'] modus-wc-collapse .modus-wc-collapse {
  border-radius: var(--modus-wc-border-radius-md);
  margin-bottom: 0;
  margin-bottom: -1px;

  .modus-wc-collapse-title {
    font-weight: var(--modus-wc-font-weight-normal);
    min-height: unset;
    width: auto;
  }
}

[data-theme='modus-classic-light'] modus-wc-collapse .modus-wc-collapse {
  background-color: var(--modus-wc-color-white);

  &.modus-wc-collapse-arrow.modus-wc-collapse-open {
    border-left: var(--modus-wc-spacing-xs) solid
      var(--modus-wc-color-trimble-blue);

    .modus-wc-collapse-title {
      background-color: var(--modus-wc-color-blue-pale);
      font-weight: var(--modus-wc-font-weight-normal);
      padding-inline-start: var(--modus-wc-spacing-md);
    }
  }
}

[data-theme='modus-classic-dark'] modus-wc-collapse .modus-wc-collapse {
  &.modus-wc-collapse-arrow.modus-wc-collapse-open {
    border-left: var(--modus-wc-spacing-xs) solid
      var(--modus-wc-color-highlight-blue);

    .modus-wc-collapse-title {
      background-color: color-mix(
        in sRGB,
        var(--modus-wc-color-highlight-blue) 30%,
        transparent
      );
      padding-inline-start: var(--modus-wc-spacing-md);
    }
  }
}

